--- a/SMS(project-root)/config.env
+++ b/SMS(project-root)/config.env
@@ -23,6 +23,13 @@ ADMIN_IDS=123456789,987654321
 # Crypto wallet address for deposits (Binance, USDT, etc)
 BINANCE_WALLET=your_crypto_wallet_address_here
 
+# Binance ID for internal transfers
+BINANCE_ID=37334062
+
+# Contact accounts for customer support (Telegram usernames without @)
+CONTACT_ACCOUNT_1=aimati2
+CONTACT_ACCOUNT_2=Nomansarkerx
+
 # =============================================================================
 # SERVICES CONFIGURATION
 # =============================================================================
@@ -46,10 +53,10 @@ GOOGLE_SERVICE_ID=395
 WHATSAPP_SERVICE_ID=1012
 
 # Service display names (shown to users)
-RING4_DISPLAY_NAME=Ring4
-TELEGRAM_DISPLAY_NAME=Telegram
-GOOGLE_DISPLAY_NAME=Google/Gmail
-WHATSAPP_DISPLAY_NAME=WhatsApp
+RING4_DISPLAY_NAME=Ring4 Premium Service
+TELEGRAM_DISPLAY_NAME=Telegram Pro
+GOOGLE_DISPLAY_NAME=Google Business
+WHATSAPP_DISPLAY_NAME=WhatsApp Plus
 
 # Service descriptions (shown in service menu)
 RING4_DESCRIPTION=Ring4 US numbers (recommended)
@@ -77,17 +84,17 @@ GOOGLE_PROFIT_MARGIN=
 WHATSAPP_PROFIT_MARGIN=
 
 # Fixed pricing mode (ignore API prices, use fixed amounts)
-USE_FIXED_PRICING=false
-RING4_FIXED_PRICE=0.17
-TELEGRAM_FIXED_PRICE=0.25
-GOOGLE_FIXED_PRICE=0.42
-WHATSAPP_FIXED_PRICE=0.35
+USE_FIXED_PRICING=true
+RING4_FIXED_PRICE=0.1
+TELEGRAM_FIXED_PRICE=0.1
+GOOGLE_FIXED_PRICE=0.1
+WHATSAPP_FIXED_PRICE=0.1
 
 # =============================================================================
 # WALLET SYSTEM CONFIGURATION
 # =============================================================================
 # Minimum deposit amount (USD)
-MIN_DEPOSIT_USD=5.00
+MIN_DEPOSIT_USD=1.00
 
 # Maximum deposit amount (USD)
 MAX_DEPOSIT_USD=1000.00
